# Resonance

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Latest_Convo_History.md  README.md  VERSIONS.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
backend/: drizzle.config.ts  package.json
backend/src/: app.ts
backend/src/db/: index.ts  migrate.ts  schema.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  favorites.ts  history.ts  playlists.ts  search.ts  tracks.ts  users.ts
backend/src/scripts/: bulk-import.ts
backend/src/utils/: fingerprint.test.ts  fingerprint.ts
docs/superpowers/plans/: 2026-04-15-audio-intelligence.md
docs/superpowers/specs/: 2026-04-15-audio-intelligence-design.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DebugPanel.tsx  DownloadManager.tsx  LibraryPickerModal.tsx  OfflineBanner.tsx  Sidebar.tsx  UpdateNotification.tsx
frontend/src/hooks/: useAudioPlayer.ts  useKeyboardShortcuts.ts  usePlatform.ts  usePullToRefresh.ts
frontend/src/services/: api.ts  lyrics.ts
frontend/src/stores/: authStore.ts  downloadStore.ts  favoritesStore.ts  index.ts  networkStore.ts  playerStore.ts  playlistStore.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
