[package]
name = "resonance"
version = "4.0.0"
description = "Resonance - Simply Music"
authors = ["Ibrahim Khaleelulla"]
edition = "2021"

[lib]
name = "resonance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "resonance"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
